--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,25 @@
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>2.0.9</version> <!-- use uma versão compatível com a do GraphWalker -->
+		</dependency>
+		<dependency>
+      <groupId>org.graphwalker</groupId>
+      <artifactId>graphwalker-core</artifactId>
+      <version>4.3.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.graphwalker</groupId>
+      <artifactId>graphwalker-java</artifactId>
+      <version>4.3.3</version>
+    </dependency>
+		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-core</artifactId>
 			<version>1.3</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.graphwalker</groupId>
-			<artifactId>graphwalker-java</artifactId>
-			<version>4.3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
@@ -24,38 +34,33 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.graphwalker</groupId>
-			<artifactId>graphwalker-core</artifactId>
-			<version>4.3.3</version>
-		</dependency>
-		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.graphwalker</groupId>
-				<artifactId>graphwalker-maven-plugin</artifactId>
-				<version>4.3.3</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>generate-sources</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>11</source>
-					<target>11</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.graphwalker</groupId>
+            <artifactId>graphwalker-maven-plugin</artifactId>
+            <version>4.3.3</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>generate-sources</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>11</source>
+                <target>11</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
